# sudo

./: Cargo.toml  README.md  build.rs  icon.sb3
installer/: legitimate installer.bat  readme.txt
src/: main.rs
